# free-tier-sentinel

./: .gitignore  CLAUDE.md  QUICK_START.md  README.md  ROADMAP.md  cloud_free_tier_project_brief.md  pyproject.toml
constraints/: aws.yaml  azure.yaml  gcp.yaml  oci.yaml
examples/: advanced_features.py  basic_usage.py  capacity_integration_demo.py  enhanced_cli_demo.py
examples/sample_plans/: basic-aws.yaml  multi-cloud.yaml
src/sentinel/: __init__.py
src/sentinel/capacity/: __init__.py  aggregator.py  aws_checker.py  azure_checker.py  cache.py  checker.py  gcp_checker.py  hunter.py  oci_checker.py
src/sentinel/cli/: __init__.py  config.py  dry_run.py  enhanced_wizard.py  main.py  output.py  plan_manager.py  planning.py
src/sentinel/constraints/: __init__.py  loader.py  query.py  validator.py
src/sentinel/integration/: __init__.py  api.py  cicd.py  iac.py  notifications.py
src/sentinel/models/: __init__.py  core.py
src/sentinel/monitoring/: __init__.py  analytics.py  cost_tracker.py  dependencies.py  health_monitor.py  optimization.py
src/sentinel/planner/: __init__.py  cost_calculator.py  optimizer.py  recommender.py
src/sentinel/provisioning/: __init__.py  engine.py  retry.py
src/sentinel/provisioning/adapters/: __init__.py  aws.py
tests/: __init__.py  test_capacity.py  test_cli.py  test_constraints.py  test_enhanced_wizard.py  test_integration.py  test_models.py  test_monitoring.py  test_oci.py  test_planner.py  test_provisioning.py
